[BUG-07] Movie panel arrow not showing correctly
updated css naming to be different in header and menus

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -26,7 +26,7 @@ html, body {
   margin-bottom: 1rem;
 }
 
-.active {
+.nav-active {
   cursor: default !important;
   color: white !important;
 }
